Add second part of Cilium networking hands-on guide
- Introduced a new post focusing on advanced Cilium networking features, including Service LoadBalancer, LB-IPAM, and L2 Announcements.
- Provided detailed instructions for setting up and testing LoadBalancer services and IP address management.
- Included practical examples for configuring native routing and overlay networks using VXLAN.
- Enhanced understanding of Cilium's capabilities in cloud-native environments through hands-on exercises.

--- a/_posts/2025-07-30-cilium.md
+++ b/_posts/2025-07-30-cilium.md
@@ -6,7 +6,7 @@ categories: cilium networking
 tags: [cilium, ipam, routing, masquerading, dns, nodelocaldns, kubernetes, ebpf, vagrant]
 ---
 
-## Cilium 네트워킹 핸즈온 가이드
+## Cilium 네트워킹 핸즈온 가이드 (1)
 
 ### 실습 환경 소개
 최근 Kubernetes 네트워킹의 복잡성이 증가하면서 Cilium이 제공하는 eBPF 기반의 고급 네트워킹 기능들이 주목받고 있습니다. 이 가이드는 Cilium의 핵심 네트워킹 기능인 IPAM, Routing, Masquerading, DNS를 실습을 통해 깊이 있게 이해할 수 있도록 구성했습니다.
