Add MCS API documentation and setup instructions for Cilium
- Introduced a comprehensive section on the Kubernetes Multi-Cluster Services (MCS) API, detailing its resources and setup.
- Provided step-by-step instructions for configuring Kind clusters, installing MCS API CRDs, and deploying Cilium with MCS support.
- Included examples for exporting services and accessing them across clusters, enhancing understanding of multi-cluster networking with Cilium.
- Added notes on CoreDNS configuration and ClusterMesh integration for optimal MCS API functionality.

--- a/_posts/2025-08-16-cilium-3.md
+++ b/_posts/2025-08-16-cilium-3.md
@@ -918,6 +918,399 @@ keast annotate service webpod service.cilium.io/affinity=remote --overwrite
 # 테스트 (원격 클러스터의 Pod에서 응답)
 kubectl exec -it curl-pod --context kind-west -- sh -c \
   'while true; do curl -s --connect-timeout 1 webpod; sleep 1; echo "---"; done;'
+
+# 동작 확인 모두완료, 전체 Kind 클러스터 정리
+kind delete clusters east
+kind delete clusters west
+```
+
+---
+
+## Multi-Cluster Services (MCS) API
+
+### MCS API 소개
+
+Kubernetes Multi-Cluster Services API는 KEP-1645에서 정의된 표준 API로, 여러 클러스터에 걸쳐 서비스를 노출하고 사용하는 표준화된 방법을 제공합니다. Cilium은 v1.17부터 MCS API를 지원하여 ClusterMesh 기반의 멀티 클러스터 서비스 디스커버리를 제공합니다.
+
+**MCS API의 주요 리소스:**
+- **ServiceExport**: 서비스를 다른 클러스터에 노출하기 위한 리소스
+- **ServiceImport**: 다른 클러스터에서 노출된 서비스를 가져오기 위한 리소스 (자동 생성)
+
+### MCS API 설정
+
+#### Kind 클러스터 실습환경 구성
+
+```bash
+# West 클러스터
+kind create cluster --name west --image kindest/node:v1.33.2 --config - <<EOF
+kind: Cluster
+apiVersion: kind.x-k8s.io/v1alpha4
+nodes:
+- role: control-plane
+- role: worker
+networking:
+  podSubnet: "10.0.0.0/16"
+  serviceSubnet: "10.2.0.0/16"
+  disableDefaultCNI: true
+  kubeProxyMode: none
+EOF
+
+# East 클러스터
+kind create cluster --name east --image kindest/node:v1.33.2 --config - <<EOF
+kind: Cluster
+apiVersion: kind.x-k8s.io/v1alpha4
+nodes:
+- role: control-plane
+- role: worker
+networking:
+  podSubnet: "10.1.0.0/16"
+  serviceSubnet: "10.3.0.0/16"
+  disableDefaultCNI: true
+  kubeProxyMode: none
+EOF
+
+# alias 설정
+alias kwest='kubectl --context kind-west'
+alias keast='kubectl --context kind-east'
+```
+
+#### MCS API CRD 설치
+
+```bash
+# MCS API CRDs 설치 (West 클러스터)
+kubectl apply --context kind-west -f https://raw.githubusercontent.com/kubernetes-sigs/mcs-api/master/config/crd/multicluster.x-k8s.io_serviceexports.yaml
+kubectl apply --context kind-west -f https://raw.githubusercontent.com/kubernetes-sigs/mcs-api/master/config/crd/multicluster.x-k8s.io_serviceimports.yaml
+
+# MCS API CRDs 설치 (East 클러스터)
+kubectl apply --context kind-east -f https://raw.githubusercontent.com/kubernetes-sigs/mcs-api/master/config/crd/multicluster.x-k8s.io_serviceexports.yaml
+kubectl apply --context kind-east -f https://raw.githubusercontent.com/kubernetes-sigs/mcs-api/master/config/crd/multicluster.x-k8s.io_serviceimports.yaml
+
+# CRD 확인
+kwest get crd | grep multicluster
+keast get crd | grep multicluster
+```
+
+#### Cilium 설치 (MCS API 지원 포함)
+
+```bash
+# West 클러스터 Cilium 설치
+cilium install --version 1.18.1 \
+  --set ipam.mode=kubernetes \
+  --set kubeProxyReplacement=true \
+  --set cluster.name=west \
+  --set cluster.id=1 \
+  --context kind-west
+
+# East 클러스터 Cilium 설치
+cilium install --version 1.18.1 \
+  --set ipam.mode=kubernetes \
+  --set kubeProxyReplacement=true \
+  --set cluster.name=east \
+  --set cluster.id=2 \
+  --context kind-east
+
+# Helm repo 추가
+helm repo add cilium https://helm.cilium.io/
+helm repo update
+
+# MCS API 지원 활성화
+kubectl config use-context kind-west
+helm upgrade cilium cilium/cilium --version 1.18.1 \
+  --namespace kube-system \
+  --reuse-values \
+  --set clustermesh.enableMCSAPISupport=true
+
+
+kubectl config use-context kind-east
+helm upgrade cilium cilium/cilium --version 1.18.1 \
+  --namespace kube-system \
+  --reuse-values \
+  --set clustermesh.enableMCSAPISupport=true
+
+# Cilium 재시작
+kubectl rollout restart ds/cilium -n kube-system --context kind-west
+kubectl rollout restart ds/cilium -n kube-system --context kind-east
+
+# 활성화 여부 확인
+cilium config view --context kind-west | grep mcs
+cilium config view --context kind-east | grep mcs
+```
+
+#### CoreDNS 멀티클러스터 플러그인 설정
+
+MCS API를 완전히 활용하려면 CoreDNS에 multicluster 플러그인을 추가해야 합니다. 이 플러그인은 `clusterset.local` 도메인을 통해 서비스를 조회할 수 있게 해줍니다.
+
+> **⚠️ 주의:** 기본 CoreDNS는 multicluster 플러그인을 포함하지 않으므로 재컴파일이 필요합니다.
+
+##### CoreDNS 재컴파일 (옵션)
+
+```bash
+# CoreDNS 소스 클론
+git clone https://github.com/coredns/coredns.git
+cd coredns
+git checkout v1.11.4
+
+# plugins.cfg 파일에 multicluster 플러그인 추가
+# kubernetes 플러그인 바로 아래에 추가
+...
+kubernetes:kubernetes
+multicluster:github.com/coredns/multicluster
+...
+
+# CoreDNS 빌드 (arm64)
+GOOS=linux GOARCH=arm64 make
+
+# Docker 이미지 빌드
+# 리눅스 aarch64(arm64) 아키텍처로 빌드하려면 아래와 같이 --platform 옵션을 변경하세요.
+docker build --platform=linux/arm64 -t coredns:multicluster .
+
+# kind 클러스터의 컨트롤 플레인 노드에 이미지 직접 로드
+kind load docker-image coredns:multicluster --name west
+kind load docker-image coredns:multicluster --name east
+```
+
+##### CoreDNS RBAC 권한 추가
+
+ServiceImport 리소스를 읽을 수 있도록 CoreDNS에 권한을 부여합니다.
+
+```bash
+# West 클러스터
+kubectl patch clusterrole system:coredns --type=json --context kind-west \
+   -p='[{"op":"add","path":"/rules/-","value":{"apiGroups":["multicluster.x-k8s.io"],"resources":["serviceimports"],"verbs":["list","watch"]}}]'
+
+# East 클러스터
+kubectl patch clusterrole system:coredns --type=json --context kind-east \
+   -p='[{"op":"add","path":"/rules/-","value":{"apiGroups":["multicluster.x-k8s.io"],"resources":["serviceimports"],"verbs":["list","watch"]}}]'
+```
+
+##### CoreDNS Corefile 수정
+
+multicluster 플러그인을 활성화하기 위해 Corefile을 수정합니다.
+
+```bash
+# West 클러스터
+kubectl edit configmap -n kube-system coredns --context kind-west
+kubectl get configmap -n kube-system coredns --context kind-west -oyaml
+
+# East 클러스터  
+kubectl edit configmap -n kube-system coredns --context kind-east
+kubectl get configmap -n kube-system coredns --context kind-east -oyaml
+
+# Corefile: |
+#   .:53 {
+#       errors
+#       health {
+#          lameduck 5s
+#       }
+#       ready
+#       multicluster clusterset.local
+#       kubernetes cluster.local in-addr.arpa ip6.arpa {
+#          pods insecure
+#          fallthrough in-addr.arpa ip6.arpa
+#          ttl 30
+#       }
+#       prometheus :9153
+#       forward . /etc/resolv.conf {
+#          max_concurrent 1000
+#       }
+#       cache 30 {
+#          disable success cluster.local
+#          disable denial cluster.local
+#       }
+#       loop
+#       reload
+#       loadbalance
+#   }
+
+# CoreDNS 재시작 및 재배포
+kubectl set image deployment/coredns -n kube-system coredns=coredns:multicluster --context kind-west
+kubectl set image deployment/coredns -n kube-system coredns=coredns:multicluster --context kind-east
+
+kubectl rollout restart deployment/coredns -n kube-system --context kind-west
+kubectl rollout restart deployment/coredns -n kube-system --context kind-east
+```
+
+> **💡 참고:** Cilium의 MCS API 구현은 CoreDNS multicluster 플러그인 없이도 기본적인 동작은 가능하지만, `clusterset.local` 도메인을 통한 표준 DNS 조회는 지원되지 않습니다. 프로덕션 환경에서는 multicluster 플러그인 설정을 권장합니다.
+
+### 서비스 내보내기 (Exporting a Service)
+
+서비스를 내보내려면 ServiceExport 리소스를 생성해야 합니다. 그러면 해당 클러스터에 서비스 네임스페이스가 있는 경우 모든 클러스터로 서비스가 내보내집니다.
+
+```yaml
+apiVersion: multicluster.x-k8s.io/v1alpha1
+kind: ServiceExport
+metadata:
+  name: rebel-base
+  namespace: default
+```
+
+모든 클러스터와 동일한 이름과 네임스페이스를 가진 각 내보낸 서비스 세트에 대해 ServiceImport 리소스가 자동으로 생성됩니다. 동일한 이름과 네임스페이스를 가진 해당 내보낸 서비스의 모든 엔드포인트는 병합되어 전역적으로 사용 가능하게 됩니다.
+
+#### DNS 도메인 구조
+
+MCS-API를 통해 내보낸 서비스는 기본적으로 `<svc>.<ns>.svc.clusterset.local` 도메인에서 사용할 수 있습니다. Pod에 호스트 이름(예: StatefulSet)을 정의한 경우, 각 Pod는 `<hostname>.<clustername>.<svc>.<ns>.svc.clusterset.local` 도메인을 통해서도 사용할 수 있습니다.
+
+> **⚠️ 주의:** 특정 클러스터의 모든 서비스 엔드포인트를 가져올 수 있는 `<clustername>.<svc>.<ns>.svc.clusterset.local` 도메인은 허용되지 않습니다!
+
+이러한 동작을 원하신다면 클러스터 및/또는 리전당 하나의 서비스를 생성하고 그에 따라 내보내는 것이 좋습니다. 예를 들어, 하나의 서비스만 생성하는 대신 `mysvc-eu`와 `mysvc-us` 서비스를 생성하고 내보내는 것이 좋습니다.
+
+### ClusterMesh 연결 설정
+
+MCS API가 작동하려면 먼저 ClusterMesh를 활성화하고 클러스터 간 연결을 설정해야 합니다.
+
+```bash
+# ClusterMesh 활성화
+cilium clustermesh enable --context kind-west --service-type NodePort
+cilium clustermesh enable --context kind-east --service-type NodePort
+
+# 상태 확인 (Ready 상태까지 대기)
+cilium clustermesh status --context kind-west --wait
+cilium clustermesh status --context kind-east --wait
+
+# 클러스터 연결
+cilium clustermesh connect --context kind-west --destination-context kind-east
+
+# 연결 상태 확인
+cilium clustermesh status --context kind-west --wait
+cilium clustermesh status --context kind-east --wait
+
+# ⚠️  Service type NodePort detected! Service may fail when nodes are removed from the cluster!
+# ✅ Service "clustermesh-apiserver" of type "NodePort" found
+# ✅ Cluster access information is available:
+#   - 192.168.97.3:32379
+# ✅ Deployment clustermesh-apiserver is ready
+# ℹ️  KVStoreMesh is enabled
+
+# ✅ All 2 nodes are connected to all clusters [min:1 / avg:1.0 / max:1]
+# ✅ All 1 KVStoreMesh replicas are connected to all clusters [min:1 / avg:1.0 / max:1]
+
+# 🔌 Cluster Connections:
+#   - east: 2/2 configured, 2/2 connected - KVStoreMesh: 1/1 configured, 1/1 connected
+
+# 🔀 Global services: [ min:3 / avg:3.0 / max:3 ]
+
+# ⚠️  Service type NodePort detected! Service may fail when nodes are removed from the cluster!
+# ✅ Service "clustermesh-apiserver" of type "NodePort" found
+# ✅ Cluster access information is available:
+#   - 192.168.97.5:32379
+# ✅ Deployment clustermesh-apiserver is ready
+# ℹ️  KVStoreMesh is enabled
+
+# ✅ All 2 nodes are connected to all clusters [min:1 / avg:1.0 / max:1]
+# ✅ All 1 KVStoreMesh replicas are connected to all clusters [min:1 / avg:1.0 / max:1]
+
+# 🔌 Cluster Connections:
+#   - west: 2/2 configured, 2/2 connected - KVStoreMesh: 1/1 configured, 1/1 connected
+
+# 🔀 Global services: [ min:3 / avg:3.0 / max:3 ]
+```
+
+### MCS-API를 사용한 간단한 예제 서비스 배포
+
+#### Cluster 1 (West) 배포
+
+```bash
+# Cilium 예제 서비스 배포
+kubectl apply --context kind-west -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/examples/kubernetes/clustermesh/cluster1.yaml
+
+# MCS API 예제 배포
+kubectl apply --context kind-west -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/examples/kubernetes/clustermesh/mcsapi-example.yaml
+```
+
+#### Cluster 2 (East) 배포
+
+```bash
+# Cilium 예제 서비스 배포
+kubectl apply --context kind-east -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/examples/kubernetes/clustermesh/cluster2.yaml
+
+# MCS API 예제 배포
+kubectl apply --context kind-east -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/examples/kubernetes/clustermesh/mcsapi-example.yaml
+```
+
+#### 내보낸 서비스 액세스
+
+두 클러스터 중 하나에서 내보낸 서비스에 액세스합니다.
+
+```bash
+# West 클러스터에서 테스트
+kubectl exec -ti deployment/x-wing --context kind-west -- curl rebel-base-mcsapi.default.svc.clusterset.local
+
+# 또는 여러 번 요청하여 클러스터 분산 확인
+for i in {1..10}; do
+  kubectl exec deployment/x-wing --context kind-west -- curl -s rebel-base-mcsapi.default.svc.clusterset.local
+done
+
+# 두 클러스터의 Pod에서 응답을 확인할 수 있습니다
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-2"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-2"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-2"}
+# {"Galaxy": "Alderaan", "Cluster": "Cluster-1"}
+```
+
+> **💡 참고:** clusterset.local 도메인이 작동하려면 CoreDNS multicluster 플러그인이 필요합니다. 플러그인이 없는 경우, ServiceImport의 ClusterIP를 직접 사용할 수 있습니다:
+> ```bash
+> # ServiceImport IP 확인
+> SVC_IP=$(kubectl get serviceimport rebel-base-mcsapi -o jsonpath='{.spec.ips[0]}' --context kind-west)
+> kubectl exec deployment/x-wing --context kind-west -- curl $SVC_IP
+> ```
+
+### ServiceImport 상태 확인
+
+```bash
+# ServiceImport 자동 생성 확인
+kwest get serviceimport rebel-base-mcsapi -n default
+keast get serviceimport rebel-base-mcsapi -n default
+
+# NAME                TYPE           IP                 AGE
+# rebel-base-mcsapi   ClusterSetIP   ["10.2.235.195"]   32s
+# NAME                TYPE           IP                 AGE
+# rebel-base-mcsapi   ClusterSetIP   ["10.3.191.219"]   32s
+
+```
+
+### ClusterMesh vs MCS API 비교
+
+#### ClusterMesh 방식
+
+**장점:**
+- ✅ Cilium 네이티브 기능으로 설정이 간단
+- ✅ `service.cilium.io/global` 어노테이션만으로 글로벌 서비스 활성화
+- ✅ Service Affinity(local/remote) 세밀한 제어 가능
+- ✅ 기존 DNS 이름 그대로 사용 가능
+- ✅ 실시간 엔드포인트 상태 추적
+- ✅ Hubble을 통한 가시성
+
+**단점:**
+- ❌ Cilium 전용 기능으로 벤더 종속성
+- ❌ 표준 Kubernetes API가 아님
+- ❌ 다른 CNI/Service Mesh와 호환성 제한
+
+#### MCS API 방식
+
+**장점:**
+- ✅ Kubernetes 표준 API (KEP-1645)
+- ✅ 벤더 중립적인 접근 방식
+- ✅ 다른 Service Mesh 솔루션과 호환 가능
+- ✅ 명시적인 서비스 노출 제어 (ServiceExport)
+- ✅ Gateway API와 통합 가능
+
+**단점:**
+- ❌ 추가 CRD 설치 필요
+- ❌ CoreDNS 설정 변경 필요 (clusterset.local 도메인)
+- ❌ 아직 베타 기능으로 성숙도 낮음
+- ❌ Service Affinity 같은 고급 기능 제한
+- ❌ Cilium에서는 실질적으로 ClusterMesh 위에서 동작
+
+```bash
+# 전체 Kind 클러스터 정리
+kind delete clusters east
+kind delete clusters west
 ```
 
 ---
