Update Cilium documentation: Revise Traffic Shifting section and add Envoy configuration examples
- Changed the title of the Traffic Shifting section to reflect a more accurate translation.
- Added detailed Envoy configuration examples for traffic shifting, including backend services and routing policies.
- Removed outdated metrics monitoring instructions to streamline the content and focus on relevant configurations.

--- a/_posts/2025-08-23-cilium-4.md
+++ b/_posts/2025-08-23-cilium-4.md
@@ -689,7 +689,7 @@ kubectl delete -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/example
 
 ---
 
-## Traffic Shifting과 Canary 배포
+## Traffic Shifting으로 트래픽 전환
 
 ### Traffic Shifting이란?
 
@@ -750,6 +750,70 @@ kubectl get svc --show-labels
 # 90% v1, 10% v2 트래픽 분산 설정
 kubectl apply -f https://raw.githubusercontent.com/cilium/cilium/1.18.1/examples/kubernetes/servicemesh/envoy/envoy-helloworld-v1-90-v2-10.yaml
 
+# apiVersion: cilium.io/v2
+# kind: CiliumEnvoyConfig
+# metadata:
+#   name: envoy-lb-listener
+# spec:
+#   services:
+#     - name: helloworld
+#       namespace: default
+#   backendServices:
+#     - name: helloworld-v1
+#       namespace: default
+#     - name: helloworld-v2
+#       namespace: default
+#   resources:
+#     - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
+#       name: envoy-lb-listener
+#       filter_chains:
+#         - filters:
+#             - name: envoy.filters.network.http_connection_manager
+#               typed_config:
+#                 "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+#                 stat_prefix: envoy-lb-listener
+#                 rds:
+#                   route_config_name: lb_route
+#                 http_filters:
+#                   - name: envoy.filters.http.router
+#                     typed_config:
+#                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+#     - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
+#       name: lb_route
+#       virtual_hosts:
+#         - name: "lb_route"
+#           domains: [ "*" ]
+#           routes:
+#             - match:
+#                 prefix: "/"
+#               route:
+#                 weighted_clusters:
+#                   clusters:
+#                     - name: "default/helloworld-v1"
+#                       weight: 90
+#                     - name: "default/helloworld-v2"
+#                       weight: 10
+#                 retry_policy:
+#                   retry_on: 5xx
+#                   num_retries: 3
+#                   per_try_timeout: 1s
+#     - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
+#       name: "default/helloworld-v1"
+#       connect_timeout: 5s
+#       lb_policy: ROUND_ROBIN
+#       type: EDS
+#       outlier_detection:
+#         split_external_local_origin_errors: true
+#         consecutive_local_origin_failure: 2
+#     - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
+#       name: "default/helloworld-v2"
+#       connect_timeout: 3s
+#       lb_policy: ROUND_ROBIN
+#       type: EDS
+#       outlier_detection:
+#         split_external_local_origin_errors: true
+#         consecutive_local_origin_failure: 2
+
 # 설정 확인
 kubectl get cec
 
@@ -768,24 +832,6 @@ done | sort | uniq -c
 # 거의 확실하게 90:10 으로 트래픽 분산됨
 # 180 v1
 #  20 v2
-```
-
-
-### 메트릭 모니터링
-
-```bash
-# Envoy 메트릭 확인
-CILIUM_POD=$(kubectl -n kube-system get pods -l k8s-app=cilium -o jsonpath='{.items[0].metadata.name}')
-kubectl -n kube-system port-forward $CILIUM_POD 9090:9090 &
-
-# 클러스터별 트래픽 통계
-curl -s localhost:9090/stats/prometheus | grep -E "cluster.*helloworld.*upstream_rq_total"
-
-# envoy_cluster_default_helloworld_v1_upstream_rq_total{} 90
-# envoy_cluster_default_helloworld_v2_upstream_rq_total{} 10
-
-# 가중치 확인
-curl -s localhost:9090/clusters | grep -A 5 "helloworld"
 ```
 
 ### 테스트 항목 정리
